--- a/101-kittens-carousel-static-website-ec2/static-web/index.html
+++ b/101-kittens-carousel-static-website-ec2/static-web/index.html
@@ -58,7 +58,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="./cat0.jpg" alt="Cuties First">
+        <img src="./rick.jpg" alt="Cuties First">
       </div>
       <div class="item">
         <img src="./cat1.jpg" alt="Cuties Second">
